# trec-classifier

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  inference.Dockerfile  localstack.Dockerfile  mlflow.Dockerfile  push_data.sh  pyproject.toml  render.yaml  train.Dockerfile
.github/workflows/: main.yml
airflow/dags/: dag_one.py
app/: flask_app.py  inference.py  pyproject.toml  streamlit_app.py
app/static/: index.html
artifacts/: model.onnx
classifier/: data.py  evaluate.py  inference.py  main.py  model.py  train.py
classifier/scripts/: train.py
config/: config.yml
data/: README.md  data.py
pipeline/: main.py  pyproject.toml
scripts/: upload_data.py
tests/: conftest.py  test_data.py  test_inference.py  test_model.py
tests/test_data/test/: data-00000-of-00001.arrow  state.json
tests/test_data/train/: data-00000-of-00001.arrow  state.json
