[tool.poetry]
name = "trec-classifier-app"
version = "0.1.0"
description = "TREC Classifier App"
authors = ["Jatin Babbar <jatinbabbar.ujm@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.41.0"
onnxruntime = "1.19.0"
torch = "^2.5.1"
transformers = "^4.47.0"
mlflow = "^2.19.0"
pytorch-lightning = "^2.4.0"
datasets = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
